link user profile

--- a/login/login.html
+++ b/login/login.html
@@ -90,7 +90,7 @@
                                        
                                         
                                 </div>
-                                <a href="./user_profile/my_profile.html" class="btn btn-success" style="margin:auto; display:block; margin-bottom:10px; width: 250px;"><i class="fas fa-sign-in-alt" style="margin-right: 10px"></i> Login</button> </a>>
+                                <a href="../user_profile/my_profile.html" class="btn btn-success" style="margin:auto; display:block; margin-bottom:10px; width: 250px; color: black"><i class="fas fa-sign-in-alt" style="margin-right: 10px"></i> Login</button> </a>>
                                 <small>Still dont't have an account? </small><a href="register.html" style="text-decoration: none; color:black"> Register here</a>
 
                                 <center>
