--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li><a href="#">Post a Ad</a></li>
+                                <li><a href="./login/login.html">Post a Ad</a></li>
                                 <li><a href="contactUs.html">Contact Us</a></li>
                             </ul>
                         </nav><!-- .site-navigation -->
