--- a/login/login.html
+++ b/login/login.html
@@ -44,14 +44,14 @@
                 <div class="row" >
                     <div class="col-12 d-flex flex-wrap justify-content-between align-items-center" >
                         <div class="site-branding d-flex align-items-center">
-                           <a class="d-block" href="index.html" rel="home" style="font-size: 25px; text-decoration: none; color: white;">රියසෙවන​.COM</a>
+                           <a class="d-block" href="../index.html" rel="home" style="font-size: 25px; text-decoration: none; color: white;">රියසෙවන​.COM</a>
                            <a href="#"><i class="far fa-user fa-2x" style="color: white; margin-left: 25px; " data-toggle="tooltip" title="Login"></i></a>
                         </div><!-- .site-branding -->
                         
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li><a href="#">Post a Ad</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="../login/login.html">Post a Ad</a></li>
+                                <li><a href="../contactUs.html">Contact Us</a></li>
                             </ul>
                         </nav><!-- .site-navigation -->
 
