--- a/user_profile/change_password.html
+++ b/user_profile/change_password.html
@@ -127,56 +127,58 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 50px;">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3">
-                    <h5>Get started</h5>
-                    <ul>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../login/register.html">Sign up</a></li>
-                        <li><a href="#">Downloads</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>Learn More</h5>
-                    <ul>
-                        <li><a href="#">How to Sell Fast</a></li>
-                        <li><a href="#">Riyasewana Compare</a></li>
-                        <li><a href="#">Buy Now on Riyasewana</a></li>
-                        <li><a href="#">Membership</a></li>
-                        <li><a href="#">Advertising</a></li>
-                        <li><a href="#">Promote Your ad</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3">
-                    <h5>Help And Support</h5>
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                        <li><a href="../contactUs.html">Contact Us</a></li>
-                    </ul>
-
-                </div>
-                <div class="col-sm-3">
-                    <h5>About us</h5>
-                    <ul>
-                        <li><a href="../contactUs.html">About Us</a></li>
-                        <li><a href="#">Career</a></li>
-                        <li><a href="../terms.html">Terms And Conditions</a></li>
-                        <li><a href="../privacy.html">Privacy Policy</a></li>
-                        <li><a href="#">Sitemap</a></li>
-                    </ul>
+     <!-- Footer -->
+     <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <h5>Get started</h5>
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="#">Sign up</a></li>
+                            <li><a href="#">Downloads</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3">
+                        <h5>Learn More</h5>
+                        <ul>
+                            <li><a href="#">How to Sell Fast</a></li>
+                            <li><a href="#">Riyasewana Compare</a></li>
+                            <li><a href="#">Buy Now on Riyasewana</a></li>
+                            <li><a href="#">Membership</a></li>
+                            <li><a href="#">Advertising</a></li>
+                            <li><a href="#">Promote Your ad</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3">
+                        <h5>Help And Support</h5>
+                        <ul>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">Stay Safe on Riysewana.com</a></li>
+                            <li><a href="../contactUs.html">Contact Us</a></li>
+                        </ul>
+                        
+                    </div>
+                    <div class="col-sm-3">
+                        <h5>About us</h5>
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="../terms.html">Terms And Conditions</a></li>
+                            <li><a href="../privacy.html">Privacy Policy</a></li>
+                            <li><a href="#">Sitemap</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="social-networks">
-            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
-        </div>
-    </footer>
+            <div class="social-networks">
+                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+                <hr>
+                <b>© 2009-2018 Riyasewana.</b> 
+            </div>
+        </footer>
 
 
 
