--- a/login/register.html
+++ b/login/register.html
@@ -152,7 +152,7 @@
                     <div class="col-sm-3">
                         <h5>Get started</h5>
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="#">Sign up</a></li>
                             <li><a href="#">Downloads</a></li>
                         </ul>
@@ -173,7 +173,7 @@
                         <ul>
                             <li><a href="#">FAQ</a></li>
                             <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                            <li><a href="./contactUs.html">Contact Us</a></li>
+                            <li><a href="../contactUs.html">Contact Us</a></li>
                         </ul>
                         
                     </div>
@@ -182,8 +182,8 @@
                         <ul>
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Career</a></li>
-                            <li><a href="./terms.html">Terms And Conditions</a></li>
-                            <li><a href="./privacy.html">Privacy Policy</a></li>
+                            <li><a href="../terms.html">Terms And Conditions</a></li>
+                            <li><a href="../privacy.html">Privacy Policy</a></li>
                             <li><a href="#">Sitemap</a></li>
                         </ul>
                     </div>
