--- a/post_ads/vehicle_ad.html
+++ b/post_ads/vehicle_ad.html
@@ -55,7 +55,7 @@
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
                                 <li><a href="#">Post a Ad</a></li>
-                                <li><a href="../contact.html">Contact Us</a></li>
+                                <li><a href="../contactUs.html">Contact Us</a></li>
                                 <hr style="color:white">
                                 <li class="d-block d-sm-none"><a href="../user_profile/my_profile.html">My Profile</a></li>
                                 <li class="d-block d-sm-none"><a href="../user_profile/my_ads.html">My Advertisements</a></li>
@@ -221,7 +221,7 @@
                     <div class="col-sm-3">
                         <h5>Get started</h5>
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="#">Sign up</a></li>
                             <li><a href="#">Downloads</a></li>
                         </ul>
@@ -242,7 +242,7 @@
                         <ul>
                             <li><a href="#">FAQ</a></li>
                             <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                            <li><a href="./contactUs.html">Contact Us</a></li>
+                            <li><a href="../contactUs.html">Contact Us</a></li>
                         </ul>
                         
                     </div>
@@ -251,8 +251,8 @@
                         <ul>
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Career</a></li>
-                            <li><a href="./terms.html">Terms And Conditions</a></li>
-                            <li><a href="./privacy.html">Privacy Policy</a></li>
+                            <li><a href="../terms.html">Terms And Conditions</a></li>
+                            <li><a href="../privacy.html">Privacy Policy</a></li>
                             <li><a href="#">Sitemap</a></li>
                         </ul>
                     </div>
