--- a/post_ads/wanted_ad.html
+++ b/post_ads/wanted_ad.html
@@ -157,13 +157,13 @@
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Bike Advertisements</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Wanted Advertisements</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
                 <div class="modal-body">
-                  Bike Advertisement Posted Successfully!
+                  Wanted Advertisement Posted Successfully!
                 </div>
                 <div class="modal-footer"> 
                   <button type="button" class="btn btn-warning" data-dismiss="modal">Ok</button>
@@ -176,14 +176,14 @@
     </div>
 
  
-      <!-- Footer -->
-      <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
+     <!-- Footer -->
+     <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-3">
                         <h5>Get started</h5>
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="../index.html">Home</a></li>
                             <li><a href="#">Sign up</a></li>
                             <li><a href="#">Downloads</a></li>
                         </ul>
@@ -204,7 +204,7 @@
                         <ul>
                             <li><a href="#">FAQ</a></li>
                             <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                            <li><a href="./contactUs.html">Contact Us</a></li>
+                            <li><a href="../contactUs.html">Contact Us</a></li>
                         </ul>
                         
                     </div>
@@ -213,8 +213,8 @@
                         <ul>
                             <li><a href="#">About Us</a></li>
                             <li><a href="#">Career</a></li>
-                            <li><a href="./terms.html">Terms And Conditions</a></li>
-                            <li><a href="./privacy.html">Privacy Policy</a></li>
+                            <li><a href="../terms.html">Terms And Conditions</a></li>
+                            <li><a href="../privacy.html">Privacy Policy</a></li>
                             <li><a href="#">Sitemap</a></li>
                         </ul>
                     </div>
