--- a/user_profile/edit_profile.html
+++ b/user_profile/edit_profile.html
@@ -13,6 +13,7 @@
 
     <!-- Jquery -->
     <script type='text/javascript' src='../js/jquery.js'></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
 
     <!--Bootstrap.min.css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -80,6 +81,45 @@
         </div><!-- .nav-bar -->
     </header><!-- .site-header -->
 
+    <script type="text/javascript">
+        function validateName() {
+            var name = document.getElementById('InputName').value;
+            if (!isTextOnly(name))
+                document.getElementById("nameMessage").style.display = "block";
+            else
+                document.getElementById("nameMessage").style.display = "none";
+        }
+
+        function isTextOnly(string) {
+            var regex = /^[a-zA-Z ]*$/;
+            return regex.test(string);
+        }
+
+        function validateEmail() {
+            var email = document.getElementById('InputEmail').value;
+            if (!isEmail(email))
+                document.getElementById("emailMessage").style.display = "block";
+            else
+                document.getElementById("emailMessage").style.display = "none";
+        }
+
+        function isEmail(email) {
+            var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+            return regex.test(email);
+        }
+
+        function validateContactNo() {
+            var phoneNumber = document.getElementById("InputContactNo").value;
+            if (!isContactNo(phoneNumber))
+                document.getElementById("contactNoMessage").style.display = "block";
+            else
+            document.getElementById("contactNoMessage").style.display = "none";
+        }
+        function isContactNo(string) {
+            var regex = /^([0-9]{10})$/;
+            return regex.test(string);
+        }
+    </script>
     <div class="container">
 
         <div class="row">
@@ -94,17 +134,22 @@
             <form>
                 <div class="form-group">
                     <label for="InputName">Name</label>
-                    <input type="text" class="form-control" id="InputName" aria-describedby="emailHelp" placeholder="Enter name">
+                    <input onkeyup="validateName()" type="text" class="form-control" id="InputName" aria-describedby="emailHelp"
+                        placeholder="Enter name">
                 </div>
+                <div id="nameMessage" class="col-sm-12" style="display: none; color: red;">Invalid Name</div>
                 <div class="form-group">
                     <label for="InputEmail">Email address</label>
-                    <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input onkeyup="validateEmail()" type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
+                        placeholder="Enter email">
                 </div>
+                <div id="emailMessage" class="col-sm-12" style="display: none; color: red;">Invalid Email</div>
                 <div class="form-group">
                     <label for="InputContactNo">Contact No.</label>
-                    <input type="text" class="form-control" id="InputContactNo" aria-describedby="emailHelp"
+                    <input onkeyup="validateContactNo()" type="text" class="form-control" id="InputContactNo" aria-describedby="emailHelp"
                         placeholder="Contact No.">
                 </div>
+                <div id="contactNoMessage" class="col-sm-12" style="display: none; color: red;">Invalid Contact No.</div>
                 <div class="form-group">
                     <label class="my-1 mr-2 col-sm-12" for="inlineFormCustomSelectPref">City</label>
                     <select class="custom-select my-1 mr-sm-2 col-sm-12" id="inlineFormCustomSelectPref">
