list page mobile responsive

--- a/SingleVehiclePage/singleVehiclePage.html
+++ b/SingleVehiclePage/singleVehiclePage.html
@@ -88,10 +88,13 @@
 
             <div class="container btn-sm" style="padding-top:2%">
                 <td>
-                    <button type="button" class="btn btn-info">
-                        <i class="fa fa-reply"></i>
-                        Back
-                    </button>
+                    <a href="../VehicleListPage/vehicleListPage.html">
+                        <button type="button" class="btn btn-info">
+
+                            <i class="fa fa-reply"></i>
+                            Back
+                        </button>
+                    </a>
             </div>
             </td>
             <td>
@@ -204,10 +207,18 @@
     </table>
     <div class="container"><strong>Description</strong></div>
     <div class="container">
-        <p>For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization,
-            WWF
-            works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million
-            globally.</p>
+        <p>Tachometer,​Spoiler,​CD player,​Air Conditioning,​Traction control,​Tilt steering wheel,​Brake Assist,​3.06
+            Rear Axle Ratio,​Premium Leather Trimmed Bucket Seats,​SiriusXM Traffic,​18 Speakers Premium Audio
+            System,​Integrated Voice Command w/Bluetooth,​Steering wheel mounted audio controls,​AutoStick (R)
+            Automatic Transmission,​Outside temperature display,​Power windows,​Rear anti-roll bar,​Illuminated
+            Entry,​Front anti-roll bar,​Rear Parking Sensors,​5-Speed Auto W5A580 Transmission,​MP3 decoder,​GPS
+            Navigation,​Low tire pressure warning,​Adaptive suspension,​6.4L V8 SRT HEMI MDS Engine,​6.5' Touchscreen
+            Display,​Automatic temperature control,​Front reading lights,​Overhead console,​Passenger vanity
+            mirror,​Anti-whiplash front head restraints,​Heated steering wheel,​Panic alarm,​SiriusXM Travel
+            Link,​Telescoping steering wheel,​RR View Auto Dim Mirror w/Microphone,​Dual front side impact
+            airbags,​LIFETIME POWERTRAIN WARRANTY!!!,​Remote Start System,​AM/FM radio,​Variably intermittent
+            wipers,​Rear window defroster,​Front Reading/Map Lamps,​Front/Rear Climate Control Outlets,​Dual Red Center
+            Stripes,​LEATHER HEATED SEATS,​Harman Kardon GreenEdge Amp,​Remote keyless entry,Air Bags</p>
 
     </div>
 
