--- a/VehicleListPage/vehicleListPage-2.html
+++ b/VehicleListPage/vehicleListPage-2.html
@@ -180,58 +180,91 @@
     </div> -->
 
 
-    <table class="table table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th colspan=3 class="text-center">Select your Vehicle</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2015-2018-challenger-hellcat-headers.jpg" /></td>
-                <td style="width:60%">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-info"><strong>Dodge Challenger SRT 2016</strong></li>
-                        <li class="list-group-item">26,000KM</li>
-                        <li class="list-group-item">Colomobo, Cars</li>
-                        <li class="list-group-item">Rs.1,550,000</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <div class="card">
-                    <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/7.jpg" /></td>
-                    <td style="width:60%">
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-info"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                            <li class="list-group-item">26,000KM</li>
-                            <li class="list-group-item">Colomobo, Cars</li>
-                            <li class="list-group-item">Rs.1,550,000</li>
-                        </ul>
-                    </td>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/Isuzu_Elf_250.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Isuzu ELF 250 2005</h4>
+                            <cite title="San Francisco, USA">Colombo, Lorries <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 15,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
                 </div>
-            </tr>
-            <tr>
-                <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2018-toyota-c-hr-review-red-5-640x640.jpg" /></td>
-                <td style="width:60%">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-info"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                        <li class="list-group-item">26,000KM</li>
-                        <li class="list-group-item">Colomobo, Cars</li>
-                        <li class="list-group-item">Rs.1,550,000</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/7450c14c5c8d1a61983c24a8efd7a25b.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Nisssan Vanette 2004</h4>
+                            <cite title="San Francisco, USA">Colombo, Lorries <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 25,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/2012-mitsubishi-canter-fe-160-14-box-truck-van-body-30k-miles-1500-lb-liftgate-121760698487-0.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Mitsubishi Canter 2012</h4>
+                            <cite title="San Francisco, USA">Colombo, Lorries <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>8,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 8,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <nav aria-label="Page navigation example">
             <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage.html">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage.html">1</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage-2.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage-3.html">3</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage-3.html">Next</a></li>
             </ul>
         </nav>
     </div>
