--- a/VehicleListPage/vehicleListPage-3.html
+++ b/VehicleListPage/vehicleListPage-3.html
@@ -50,7 +50,7 @@
 
                         <nav class="site-navigation d-flex justify-content-end align-items-center d-none d-lg-block">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li>
+                                <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -61,7 +61,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li>
+                                <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -72,7 +72,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li>
+                                <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -83,7 +83,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li>
+                                <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -94,7 +94,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li>
+                                <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -105,7 +105,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li>
+                                <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -161,9 +161,9 @@
                 <td>
                     <select class="form-control">
                         <option>Select Vehicle Type</option>
-                        <option>Car</option>
+                        <option><a href="./vehicleListPage.html">Car</a></option>
                         <option>Lorry</option>
-                        <option>Van</option>
+                        <option><a href="./vehicleListPage-3.html">Van</a></option>
                     </select>
                     </div>
                 </td>
@@ -178,137 +178,102 @@
             <span class="glyphicon glyphicon-search"></span>Vehicle Category
         </button>
     </div> -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
 
-
-    <table class="table table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th colspan=3 class="text-center">Select your Vehicle</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2015-2018-challenger-hellcat-headers.jpg" /></td>
-                <td style="width:60%">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-info"><strong>Dodge Challenger SRT 2016</strong></li>
-                        <li class="list-group-item">26,000KM</li>
-                        <li class="list-group-item">Colomobo, Cars</li>
-                        <li class="list-group-item">Rs.1,550,000</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <div class="card">
-                    <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/7.jpg" /></td>
-                    <td style="width:60%">
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-info"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                            <li class="list-group-item">26,000KM</li>
-                            <li class="list-group-item">Colomobo, Cars</li>
-                            <li class="list-group-item">Rs.1,550,000</li>
-                        </ul>
-                    </td>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/toyota-kdh-200-71228001.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Toyota KDH 200-2008</h4>
+                            <cite title="San Francisco, USA">Colombo, Vans <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 5,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
                 </div>
-            </tr>
-            <tr>
-                <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2018-toyota-c-hr-review-red-5-640x640.jpg" /></td>
-                <td style="width:60%">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-info"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                        <li class="list-group-item">26,000KM</li>
-                        <li class="list-group-item">Colomobo, Cars</li>
-                        <li class="list-group-item">Rs.1,550,000</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/001.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Nissan Vanette 2004</h4>
+                            <cite title="San Francisco, USA">Colombo, Vans <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 5,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/dolphin.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Toyota Hiace 1998</h4>
+                            <cite title="San Francisco, USA">Colombo, Vans <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 5,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <div class="container">
         <nav aria-label="Page navigation example">
             <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage-2.html">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage.html">1</a></li>
+                <li class="page-item"><a class="page-link" href="./vehicleListPage-2.html">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                <!-- <li class="page-item"><a class="page-link" href="#">Next</a></li> -->
             </ul>
         </nav>
     </div>
-    <!--Search Form start-->
-
-    <!-- <section class="py-2">
-           <div class="container">
-               <div class="row">
-                   <div class="col-md-6 offset-md-3 form">
-                        <form>
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-
-                                <div class="box">
-                                        <select name="" id="dropdown">
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                            <option value="">Option 1</option>
-                                        </select>
-                                </div>
-                        </form>
-                   </div>
-               </div>
-           </div>
-       </section> -->
 
 
     <section id="footer1" style="" class="py-4">
