--- a/VehicleListPage/vehicleListPage.html
+++ b/VehicleListPage/vehicleListPage.html
@@ -61,7 +61,7 @@
                                             </select>
                                         </div>
                                 </li>
-                                <li class="d-block d-sm-none">
+                                <!-- <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
@@ -71,15 +71,15 @@
                                                 <option value="">Toyota</option>
                                             </select>
                                         </div>
-                                </li>
+                                </li> -->
                                 <li class="d-block d-sm-none">
                                     <form>
                                         <div class="form-group">
                                             <select name="" id="dropdown">
                                                 <option value="">Condition</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
+                                                <option value="">Brand New </option>
+                                                <option value="">Used</option>
+                                                <option value="">Re-conditioned</option>
                                             </select>
                                         </div>
                                 </li>
@@ -88,9 +88,9 @@
                                         <div class="form-group">
                                             <select name="" id="dropdown">
                                                 <option value="">Fuel Type</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
+                                                <option value="">Petrol</option>
+                                                <option value="">Diesel</option>
+                                                <option value="">Other</option>
                                             </select>
                                         </div>
                                 </li>
@@ -99,9 +99,9 @@
                                         <div class="form-group">
                                             <select name="" id="dropdown">
                                                 <option value="">Transmission</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
+                                                <option value="">Automatic</option>
+                                                <option value="">Manual</option>
+                                                <option value="">Tiptronic</option>
                                             </select>
                                         </div>
                                 </li>
@@ -110,9 +110,13 @@
                                         <div class="form-group">
                                             <select name="" id="dropdown">
                                                 <option value="">Year</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
+                                                <option value="">2018</option>
+                                                <option value="">2017</option>
+                                                <option value="">2016</option>
+                                                <option value="">2015</option>
+                                                <option value="">2014</option>
+                                                <option value="">2013</option>
+                                                <option value="">2012</option>
                                             </select>
                                         </div>
                                 </li>
@@ -161,9 +165,9 @@
                 <td>
                     <select class="form-control">
                         <option>Select Vehicle Type</option>
-                        <option>Car</option>
+                        <option><a href="./vehicleListPage.html">Car</a></option>
                         <option>Lorry</option>
-                        <option>Van</option>
+                        <option><a href="./vehicleListPage-3.html">Van</a></option>
                     </select>
                     </div>
                 </td>
@@ -180,54 +184,88 @@
     </div> -->
 
 
-    <table class="table table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th colspan=3 class="text-center">Select your Vehicle</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2015-2018-challenger-hellcat-headers.jpg" /></td>
-                <td style="width:60%">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-info"><strong>Dodge Challenger SRT 2016</strong></li>
-                        <li class="list-group-item">26,000KM</li>
-                        <li class="list-group-item">Colomobo, Cars</li>
-                        <li class="list-group-item">Rs.1,550,000</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <div class="card">
-                    <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/7.jpg" /></td>
-                    <td style="width:60%">
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-info"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                            <li class="list-group-item">26,000KM</li>
-                            <li class="list-group-item">Colomobo, Cars</li>
-                            <li class="list-group-item">Rs.1,550,000</li>
-                        </ul>
-                    </td>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4"><a href="../SingleVehiclePage/singleVehiclePage.html">
+                            <img class="img-thumbnail rounded float-left" src="../images/dodge-challenger-hellcat-2014-019_0.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                               Dodge Challenger SRT 2014</h4>
+                            <cite title="San Francisco, USA">Colombo, Cars <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 15,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </a>
+                    </div>
                 </div>
-            </tr>
-            <tr>
-                <td style="width:38%" class="text-right"><img class="img-responsive imgList" src="../images/2018-toyota-c-hr-review-red-5-640x640.jpg" /></td>
-                <td style="width:60%">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-info"><strong>Dodge Challenger Hellcat 2016</strong></li>
-                        <li class="list-group-item">26,000KM</li>
-                        <li class="list-group-item">Colomobo, Cars</li>
-                        <li class="list-group-item">Rs.1,550,000</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/7.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Ford Mustang GT 2008</h4>
+                            <cite title="San Francisco, USA">Colombo, Cars <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 25,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img class="img-thumbnail rounded float-left" src="../images/2018-toyota-c-hr-review-red-5-640x640.jpg" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
+                            <h4>
+                                Toyota CHR 2018</h4>
+                            <cite title="San Francisco, USA">Colombo, Cars <i class="glyphicon glyphicon-map-marker">
+                                </i></cite>
+                            <p>
+                                <i class="glyphicon glyphicon-envelope"></i>8,000 KM
+                                <br />
+                                <i class="glyphicon glyphicon-globe"></i>Rs. 8,500,000
+                                <br />
+                                <i class="glyphicon glyphicon-gift"></i><small>Added on 2018/09/28</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <nav aria-label="Page navigation example">
             <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <!-- <li class="page-item"><a class="page-link" href="#">Previous</a></li> -->
                 <li class="page-item"><a class="page-link" href="vehicleListPage.html">1</a></li>
                 <li class="page-item"><a class="page-link" href="vehicleListPage-2.html">2</a></li>
                 <li class="page-item"><a class="page-link" href="vehicleListPage-3.html">3</a></li>
