Changed the type attributes of the input tags of the page vehicle_ad

--- a/post_ads/vehicle_ad.html
+++ b/post_ads/vehicle_ad.html
@@ -133,7 +133,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputEmail1">Price (Rs.)</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter price (negotiable)">
+                        <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter price (negotiable)">
                     </div> 
 
                     <div class="form-group">
@@ -153,17 +153,17 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Engine Capacity</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Engine Capacity">
+                        <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Engine Capacity (cc)</label>
+                        <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Engine Capacity">
                     </div>
 
                     <div class="form-group">
-                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Millage (km)</label>
-                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Millage">
+                            <label for="exampleInputEmail1" class="col-md-4 col-sm-12 ">Mileage (km)</label>
+                            <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Millage">
                         </div>
 
                     <div class="form-group">
-                        <label for="exampleInputPassword1"  class="col-md-5 col-sm-12 ">Additional Infomartion</label>
+                        <label for="exampleInputPassword1"  class="col-md-5 col-sm-12 ">Additional Infomation</label>
                         <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Additional Information">
                     </div> 
 
