side bar settings

--- a/VehicleListPage/vehicleListPage-3.html
+++ b/VehicleListPage/vehicleListPage-3.html
@@ -48,88 +48,130 @@
                                     data-toggle="tooltip" title="Login"></i></a>
                         </div><!-- .site-branding -->
 
-                        <nav class="site-navigation d-flex justify-content-end align-items-center d-none d-lg-block">
+                        <nav class="site-navigation d-flex justify-content-end align-items-center">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li class="d-block d-sm-none">
-                                    <form>
-                                        <div class="form-group">
-                                            <select name="" id="dropdown">
-                                                <option value="">Brand</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
-                                            </select>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Brand
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">Toyota</a>
+                                            <a href="#">Dodge</a>
+                                            <a href="#">Ford</a>
                                         </div>
+                                    </div>
                                 </li>
-                                <li class="d-block d-sm-none">
-                                    <form>
-                                        <div class="form-group">
-                                            <select name="" id="dropdown">
-                                                <option value="">Model</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
-                                            </select>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Model
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">CHR</a>
+                                            <a href="#">Corolla</a>
+                                            <a href="#">Prius</a>
                                         </div>
+                                    </div>
                                 </li>
-                                <li class="d-block d-sm-none">
-                                    <form>
-                                        <div class="form-group">
-                                            <select name="" id="dropdown">
-                                                <option value="">Condition</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
-                                            </select>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Condition
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">Brand new</a>
+                                            <a href="#">Used</a>
+                                            <a href="#">Re-conditioned</a>
                                         </div>
+                                    </div>
                                 </li>
-                                <li class="d-block d-sm-none">
-                                    <form>
-                                        <div class="form-group">
-                                            <select name="" id="dropdown">
-                                                <option value="">Fuel Type</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
-                                            </select>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Fuel Type
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">Diesel</a>
+                                            <a href="#">Petrol</a>
+                                            <a href="#">Other</a>
                                         </div>
+                                    </div>
                                 </li>
-                                <li class="d-block d-sm-none">
-                                    <form>
-                                        <div class="form-group">
-                                            <select name="" id="dropdown">
-                                                <option value="">Transmission</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
-                                            </select>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Transmission
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">Automatic</a>
+                                            <a href="#">Manual</a>
+                                            <a href="#">Tiptronic</a>
                                         </div>
+                                    </div>
                                 </li>
-                                <li class="d-block d-sm-none">
-                                    <form>
-                                        <div class="form-group">
-                                            <select name="" id="dropdown">
-                                                <option value="">Year</option>
-                                                <option value="">Dodge</option>
-                                                <option value="">Ford</option>
-                                                <option value="">Toyota</option>
-                                            </select>
-                                        </div>
-                                </li>
-                    </div>
-                    </ul>
-                    </nav><!-- .site-navigation -->
 
-                    <div class="hamburger-menu d-lg-none">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div><!-- .hamburger-menu -->
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Year
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">2018</a>
+                                            <a href="#">2017</a>
+                                            <a href="#">2016</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Price
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">Link 1</a>
+                                            <a href="#">Link 2</a>
+                                            <a href="#">Link 3</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Body Type
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">Salon</a>
+                                            <a href="#">Coupe</a>
+                                            <a href="#">Hatchpack</a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="dropdown">
+                                        <button class="dropbtn">Mileage
+                                            <i class="fa fa-caret-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">Link 1</a>
+                                            <a href="#">Link 2</a>
+                                            <a href="#">Link 3</a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </nav><!-- .site-navigation -->
 
-                </div><!-- .col -->
-            </div><!-- .row -->
-        </div><!-- .container -->
+                        <div class="hamburger-menu d-lg-none">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div><!-- .hamburger-menu -->
+
+                    </div><!-- .col -->
+                </div><!-- .row -->
+            </div><!-- .container -->
         </div><!-- .nav-bar -->
     </header><!-- .site-header -->
 
@@ -151,7 +193,7 @@
             <form>
                 <td>
                     <div class="form-group">
-                        <select class="form-control">
+                        <select class="form-control selectMain">
                             <option>Select Location</option>
                             <option>Colombo</option>
                             <option>Kandy</option>
@@ -159,7 +201,7 @@
                         </select>
                 </td>
                 <td>
-                    <select class="form-control">
+                    <select class="form-control selectMain">
                         <option>Select Vehicle Type</option>
                         <option><a href="./vehicleListPage.html">Car</a></option>
                         <option>Lorry</option>
@@ -287,56 +329,56 @@
 
     <!-- Footer -->
     <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <h5>Get started</h5>
-                        <ul>
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="#">Sign up</a></li>
-                            <li><a href="#">Downloads</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>Learn More</h5>
-                        <ul>
-                            <li><a href="#">How to Sell Fast</a></li>
-                            <li><a href="#">Riyasewana Compare</a></li>
-                            <li><a href="#">Buy Now on Riyasewana</a></li>
-                            <li><a href="#">Membership</a></li>
-                            <li><a href="#">Advertising</a></li>
-                            <li><a href="#">Promote Your ad</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>Help And Support</h5>
-                        <ul>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                            <li><a href="../contactUs.html">Contact Us</a></li>
-                        </ul>
-                        
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>About us</h5>
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="../terms.html">Terms And Conditions</a></li>
-                            <li><a href="../privacy.html">Privacy Policy</a></li>
-                            <li><a href="#">Sitemap</a></li>
-                        </ul>
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Get started</h5>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Downloads</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Learn More</h5>
+                    <ul>
+                        <li><a href="#">How to Sell Fast</a></li>
+                        <li><a href="#">Riyasewana Compare</a></li>
+                        <li><a href="#">Buy Now on Riyasewana</a></li>
+                        <li><a href="#">Membership</a></li>
+                        <li><a href="#">Advertising</a></li>
+                        <li><a href="#">Promote Your ad</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Help And Support</h5>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Stay Safe on Riysewana.com</a></li>
+                        <li><a href="../contactUs.html">Contact Us</a></li>
+                    </ul>
+
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="../terms.html">Terms And Conditions</a></li>
+                        <li><a href="../privacy.html">Privacy Policy</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="social-networks">
-                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
-                <hr>
-                <b>© 2009-2018 Riyasewana.</b> 
-            </div>
-        </footer>
+        </div>
+        <div class="social-networks">
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+            <hr>
+            <b>© 2009-2018 Riyasewana.</b>
+        </div>
+    </footer>
 
 
     <!-- Jquery -->
@@ -350,6 +392,7 @@
     <script type='text/javascript' src='../js/jquery.barfiller.js'></script>
     <script type='text/javascript' src='../js/custom.js'></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </body>
 
