--- a/SingleVehiclePage/singleVehiclePage.html
+++ b/SingleVehiclePage/singleVehiclePage.html
@@ -104,7 +104,7 @@
         </tr>
 
     </table>
-    <div class="container" style="width:60%">
+    <div class="container" style="width:80%">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -222,6 +222,37 @@
 
     </div>
 
+    <hr>
+    <div class="container">
+        <h3>Similar Ads</h3>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-6 col-md-6">
+                    <div class="well well-sm">
+                        <div class="row">
+                            <div class="col-sm-6 col-md-4"><a href="../SingleVehiclePage/singleVehiclePage.html">
+                                    <img class="img-thumbnail rounded float-left" src="../images/2012-dodge-charger-frontside_dochrgrrt121.jpg" />
+                            </div>
+                            <div class="col-sm-6 col-md-8">
+                                <h4>
+                                    Dodge Charger RT 2012</h4>
+                                <cite title="San Francisco, USA">Colombo, Cars <i class="glyphicon glyphicon-map-marker">
+                                    </i></cite>
+                                <p>
+                                    <i class="glyphicon glyphicon-envelope"></i>26,000 KM
+                                    <br />
+                                    <i class="glyphicon glyphicon-gift"></i>Rs. 15,500,000
+                                    <br />
+                                    <i></i><small>Added on 2018/09/28</small></p>
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section id="footer1" class="py-4">
         <div class="container-fluied">
@@ -234,56 +265,56 @@
 
     <!-- Footer -->
     <footer id="myFooter" class="col-md-12 py-4" style="margin-top: 20px;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <h5>Get started</h5>
-                        <ul>
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="#">Sign up</a></li>
-                            <li><a href="#">Downloads</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>Learn More</h5>
-                        <ul>
-                            <li><a href="#">How to Sell Fast</a></li>
-                            <li><a href="#">Riyasewana Compare</a></li>
-                            <li><a href="#">Buy Now on Riyasewana</a></li>
-                            <li><a href="#">Membership</a></li>
-                            <li><a href="#">Advertising</a></li>
-                            <li><a href="#">Promote Your ad</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>Help And Support</h5>
-                        <ul>
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Stay Safe on Riysewana.com</a></li>
-                            <li><a href="../contactUs.html">Contact Us</a></li>
-                        </ul>
-                        
-                    </div>
-                    <div class="col-sm-3">
-                        <h5>About us</h5>
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Career</a></li>
-                            <li><a href="../terms.html">Terms And Conditions</a></li>
-                            <li><a href="../privacy.html">Privacy Policy</a></li>
-                            <li><a href="#">Sitemap</a></li>
-                        </ul>
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Get started</h5>
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Downloads</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Learn More</h5>
+                    <ul>
+                        <li><a href="#">How to Sell Fast</a></li>
+                        <li><a href="#">Riyasewana Compare</a></li>
+                        <li><a href="#">Buy Now on Riyasewana</a></li>
+                        <li><a href="#">Membership</a></li>
+                        <li><a href="#">Advertising</a></li>
+                        <li><a href="#">Promote Your ad</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Help And Support</h5>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Stay Safe on Riysewana.com</a></li>
+                        <li><a href="../contactUs.html">Contact Us</a></li>
+                    </ul>
+
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="../terms.html">Terms And Conditions</a></li>
+                        <li><a href="../privacy.html">Privacy Policy</a></li>
+                        <li><a href="#">Sitemap</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="social-networks">
-                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
-                <hr>
-                <b>© 2009-2018 Riyasewana.</b> 
-            </div>
-        </footer>
+        </div>
+        <div class="social-networks">
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="google"><i class="fab fa-google-plus-g"></i></a>
+            <hr>
+            <b>© 2009-2018 Riyasewana.</b>
+        </div>
+    </footer>
 
 
     <!-- Jquery -->
